--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@ footer.footer {
   // Example App Privacy Data
   const appsData = {
     {
+  "LinkedIn": {
+  "dataCollected": ["Contacts", "Work History", "Location", "Messages", "Usage Data"],
+  "permissions": ["Contacts", "Camera", "Storage", "Location"],
+  "safe": false
+}
   "YouTube": {
     "dataCollected": ["Location", "Search History", "Device Info", "Viewing History"],
     "permissions": ["Camera", "Microphone", "Storage", "Location"],
@@ -815,4 +820,5 @@ footer.footer {
   </script>
 </body>
 </html>
+
 
